feat: add links

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="columns">
                 <div class="column1">
 
-                    <div class="slideshow_container" id="slideshow_container">
+                    <div class="slideshow_container" id="slideshow_container" onclick="leave();" style="cursor: pointer;">
 
                         <div class="image_shadow"></div>
 
@@ -50,33 +50,41 @@
 
                 <div class="cards">
                     <div class="card">
-                        <img class="card_img" src="images/Content/content1.jpg" alt="Makron">
-                        <div class="card_content">
-                            <h4>Макрон приема Тръмп като електрошок за Европа</h4>
-                            <p class="card_littleText">⏲ преди 1 час | <a href="#" class="card_link">Политика</a></p>
-                            <p class="card_description">Само Зеленски може да преговаря от името на страната</p>
-                        </div>
+                        <a href="https://news.bg/" target="_blank">
+                            <img class="card_img" src="images/Content/content1.jpg" alt="Makron">
+                            <div class="card_content">
+                                <h4>Макрон приема Тръмп като електрошок за Европа</h4>
+                        </a>
+                                <p class="card_littleText">⏲ преди 1 час | <a href="#" class="card_link">Политика</a></p>
+                                <p class="card_description">Само Зеленски може да преговаря от името на страната</p>
+                            </div>
                     </div>
                     <div class="card2">
+                        <a href="https://news.bg/" target="_blank">
                         <img class="card_img" src="images/Content/content3.jpg" alt="Makron">
                         <div class="card_content">
                             <h4>Моди и Тръмп решават за митата и търговията</h4>
+                        </a>
                             <p class="card_littleText">⏲ преди 4 часа | <a href="#" class="card_link">Политика</a></p>
                             <p class="card_description">Двамата лидери са готови да избегнат търговската война чрез сделки</p>
                         </div>
                     </div>
                     <div class="card">
+                        <a href="https://news.bg/" target="_blank">
                         <img class="card_img" src="images/Content/content4.jpg" alt="Makron">
                         <div class="card_content">
                             <h4>Хусите плашат с нови атаки, ако САЩ и Израел изселят жителите на Газа</h4>
+                        </a>
                             <p class="card_littleText">⏲ преди 6 час | <a href="#" class="card_link">Политика</a></p>
                             <p class="card_description">Двамата лидери са готови да избегнат търговска война чрез сделки</p>
                         </div>
                     </div>
                     <div class="card2">
+                        <a href="https://news.bg/" target="_blank">
                         <img class="card_img" src="images/Content/content2.jpg" alt="Makron">
                         <div class="card_content">
                             <h4>Великобритания задържа шестима за трафик на мигранти</h4>
+                        </a>
                             <p class="card_littleText">⏲ преди 11 часа | <a href="#" class="card_link">Политика</a></p>
                             <p class="card_description">Според властите, групата е действала и в други държави, сред които Белгия и Итал....</p>
                         </div>
@@ -92,61 +100,81 @@
                         </div>
                         <div class="card3">
                             <div class="card_content">
-                                <h4>Макрон приема Тръмп като електрошок за Европа</h4>
+                                <a href="https://news.bg/" target="_blank">
+                                    <h4>Макрон приема Тръмп като електрошок за Европа</h4>
+                                </a>
                                 <p class="card_littleText">⏲ преди 1 час | <a href="#" class="card_link">Политика</a></p>
                             </div>
                         </div>
                         <div class="card3">
                             <div class="card_content">
-                                <h4>Тръмп обяви тристрани преговори за прекратяване на войната в Украйна</h4>
+                                <a href="https://news.bg/" target="_blank">
+                                    <h4>Тръмп обяви тристрани преговори за прекратяване на войната в Украйна</h4>
+                                </a>
                                 <p class="card_littleText">⏲ преди 14 минути | <a href="#" class="card_link">Политика</a></p>
                             </div>
                         </div>
                         <div class="card3">
                             <div class="card_content">
-                                <h4>САЩ депортира 119 мигранти в Панама</h4>
+                                <a href="https://news.bg/" target="_blank">
+                                    <h4>САЩ депортира 119 мигранти в Панама</h4>
+                                </a>
                                 <p class="card_littleText">⏲ преди 43 минути | <a href="#" class="card_link">Политика</a></p>
                             </div>
                         </div>
                         <div class="card3">
                             <div class="card_content">
-                                <h4>Мексико може да съди Google Maps заради преименуването на Мексиканския залив</h4>
+                                <a href="https://news.bg/" target="_blank">
+                                    <h4>Мексико може да съди Google Maps заради преименуването на Мексиканския залив</h4>
+                                </a>
                                 <p class="card_littleText">⏲ преди 1 час | <a href="#" class="card_link">Политика</a></p>
                             </div>
                         </div>
                         <div class="card3">
                             <div class="card_content">
-                                <h4>ISW: Следващите действия на Русия срещу съседите зависят от мира с Украйна</h4>
+                                <a href="https://news.bg/" target="_blank">
+                                    <h4>ISW: Следващите действия на Русия срещу съседите зависят от мира с Украйна</h4>
+                                </a>
                                 <p class="card_littleText">⏲ преди 1 час | <a href="#" class="card_link">Политика</a></p>
                             </div>
                         </div>
                         <div class="card3">
                             <div class="card_content">
-                                <h4>Рубио и Сибиха обсъдиха мира в Украйна</h4>
+                                <a href="https://news.bg/" target="_blank">
+                                    <h4>Рубио и Сибиха обсъдиха мира в Украйна</h4>
+                                </a>
                                 <p class="card_littleText">⏲ преди 2 часа | <a href="#" class="card_link">Политика</a></p>
                             </div>
                         </div>
                         <div class="card3">
                             <div class="card_content">
-                                <h4>Хусите плашат с нови атаки, ако САЩ и Израел изселят жителите на Газа</h4>
+                                <a href="https://news.bg/" target="_blank">
+                                    <h4>Хусите плашат с нови атаки, ако САЩ и Израел изселят жителите на Газа</h4>
+                                </a>
                                 <p class="card_littleText">⏲ преди 2 часа | <a href="#" class="card_link">Политика</a></p>
                             </div>
                         </div>
                         <div class="card3">
                             <div class="card_content">
-                                <h4>14 февруари - какво отбелязваме днес</h4>
+                                <a href="https://news.bg/" target="_blank">
+                                    <h4>14 февруари - какво отбелязваме днес</h4>
+                                </a>
                                 <p class="card_littleText">⏲ преди 3 часа | <a href="#" class="card_link">Политика</a></p>
                             </div>
                         </div>
                         <div class="card3">
                             <div class="card_content">
-                                <h4>Моди и Тръмп решават за митата и търговията</h4>
+                                <a href="https://news.bg/" target="_blank">
+                                    <h4>Моди и Тръмп решават за митата и търговията</h4>
+                                </a>
                                 <p class="card_littleText">⏲ преди 3 часа | <a href="#" class="card_link">Политика</a></p>
                             </div>
                         </div>
                         <div class="card3">
                             <div class="card_content">
-                                <h4>Тръмп подписа и за реципрочните мита</h4>
+                                <a href="https://news.bg/" target="_blank">
+                                    <h4>Тръмп подписа и за реципрочните мита</h4>
+                                </a>
                                 <p class="card_littleText">⏲ преди 3 часа | <a href="#" class="card_link">Политика</a></p>
                             </div>
                         </div>
@@ -155,18 +183,19 @@
 
             <div class="editorsChoice">
                 <h1>Избор на редактора</h1>
-                <img src="images/Content/rosenKaradimov.jpg" alt="Росен Карадимов">
-                <img src="images/Content/ilhanKyuchuk.jpg" alt="Илхан Кючук">
-                <img src="images/Content/mladiBulgari.jpg" alt="Българското знаме">
-                <img src="images/Content/beliqDom.jpg" alt="Президент Тръмп">
+                <img src="images/Content/rosenKaradimov.jpg" alt="Росен Карадимов" onclick="leave();" style="cursor: pointer;">
+                <img src="images/Content/ilhanKyuchuk.jpg" alt="Илхан Кючук" onclick="leave();" style="cursor: pointer;">
+                <img src="images/Content/mladiBulgari.jpg" alt="Българското знаме" onclick="leave();" style="cursor: pointer;">
+                <img src="images/Content/beliqDom.jpg" alt="Президент Тръмп" onclick="leave();" style="cursor: pointer;">
+
                 <h4>Росен Карадимов няма да се оттегли от битката за КЗК</h4>
                 <h4>Илхан Кючук вижда не разграждане, а утвърждаване на модела "Пеевски"</h4>
                 <h4>62% от младите българи готови да бранят родината си във война</h4>
                 <h4>След скандала в Белия дом Тръмп спира военната помощ за украйна?</h4>
-                <img src="images/Content/voennaSlujba.jpg" alt="Войници">
-                <img src="images/Content/merkel.jpg" alt="Меркел пред евопейското знаме">
-                <img src="images/Content/pravosudieto.jpg" alt="АОБР и министърът на правосъдието">
-                <img src="images/Content/helikopter.jpg" alt="Медицински хеликоптер">
+                <img src="images/Content/voennaSlujba.jpg" alt="Войници" onclick="leave();" style="cursor: pointer;">
+                <img src="images/Content/merkel.jpg" alt="Меркел пред евопейското знаме" onclick="leave();" style="cursor: pointer;">
+                <img src="images/Content/pravosudieto.jpg" alt="АОБР и министърът на правосъдието" onclick="leave();" style="cursor: pointer;">
+                <img src="images/Content/helikopter.jpg" alt="Медицински хеликоптер" onclick="leave();" style="cursor: pointer;">
                 <h4>Трябра ли Европа да върне задължителната военна служба?</h4>
                 <h4>Меркел призова ЕС да създаде "истинска европейска армия"</h4>
                 <h4>Правосъдният министър и АОБР умуват върху създаването на регистър на арбитражните съдилища</h4>
@@ -183,8 +212,6 @@
                         Браузърът ви не поддържа видео тага.
                 </video>
             </div>
-
-
 
     </div>
 
