--- a/pages/privacyPolicy.html
+++ b/pages/privacyPolicy.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/styles.css">
     <link rel="icon" type="image/x-icon" href="../images/logoFavicon.png">
+    <script src="../scripts/scroll.js" defer></script>
     <title>Политика за поверителност</title>
 </head>
 <body>
